[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SwarmSwIM"
version = "0.3.0"
description = "Simulator for underwater swarm robotics"
readme = "README.md"
authors = [
  { name = "Saverio Iacoponi", email = "saverio.iacoponi@ku.ac.ae" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "fastapi",
  "uvicorn",
  "opencv-python"
]

[tool.setuptools.packages.find]
where = ["."]
